--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "moderator",
   "version": "1.0.0",
-  "main": "index.ts",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
@@ -21,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
@@ -35,11 +35,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.1",
     "nodemon": "^3.1.9",
     "submit-jokes": "file:"
   }
