--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "moderator": "file:",
     "nodemon": "^3.1.9",
     "submit-jokes": "file:"
   }
