--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "prepare": "husky"
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "lint-staged": {
     "*.{js,ts,json}": [
